plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'mars'
version = '0.0.1-SNAPSHOT'
description = 'trip-plan-app-backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

def loadDotEnv() {
	def env = [:]
	def envFile = file('.env')

	if (!envFile.exists()) {
		return env
	}

	envFile.eachLine { rawLine ->
		def line = rawLine.trim()
		if (!line || line.startsWith('#')) {
			return
		}

		def separatorIndex = line.indexOf('=')
		if (separatorIndex <= 0) {
			return
		}

		def key = line.substring(0, separatorIndex).trim()
		def value = line.substring(separatorIndex + 1).trim()
		env[key] = value
	}

	return env
}

def dotenv = loadDotEnv()

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
    implementation 'io.github.cdimascio:java-dotenv:5.2.2'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('bootRun') {
	systemProperties dotenv
}

tasks.named('test') {
	useJUnitPlatform()
	systemProperties dotenv
}
